--- a/TacoApp/View/Base.lproj/Main.storyboard
+++ b/TacoApp/View/Base.lproj/Main.storyboard
@@ -20,11 +20,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tdj-al-ecb">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tdj-al-ecb" customClass="HeaderView" customModule="TacoApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oxP-mh-Cd5">
-                                        <rect key="frame" x="67" y="14" width="240" height="52"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Taco-POP" translatesAutoresizingMaskIntoConstraints="NO" id="oxP-mh-Cd5">
+                                        <rect key="frame" x="62" y="17.5" width="250" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="9Or-uO-Ah2"/>
+                                            <constraint firstAttribute="width" constant="250" id="jkl-Xe-Ckb"/>
+                                        </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -42,10 +46,16 @@
                             <constraint firstAttribute="trailing" secondItem="tdj-al-ecb" secondAttribute="trailing" id="T6n-H3-IBa"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="headerView" destination="tdj-al-ecb" id="iFY-K0-HFp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Taco-POP" width="490" height="100"/>
+    </resources>
 </document>
