--- a/TacoApp/View/Base.lproj/Main.storyboard
+++ b/TacoApp/View/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.16"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -38,15 +39,40 @@
                                     <constraint firstAttribute="height" constant="80" id="VMw-au-YK2"/>
                                 </constraints>
                             </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xU6-rU-Ofs">
+                                <rect key="frame" x="16" y="100" width="343" height="547"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rck-j2-z3g">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bds-OY-4oI">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="tdj-al-ecb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9BW-TT-E1e"/>
                             <constraint firstItem="tdj-al-ecb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="MqN-2k-Do0"/>
+                            <constraint firstItem="xU6-rU-Ofs" firstAttribute="top" secondItem="tdj-al-ecb" secondAttribute="bottom" constant="20" id="OIH-mL-FbF"/>
                             <constraint firstAttribute="trailing" secondItem="tdj-al-ecb" secondAttribute="trailing" id="T6n-H3-IBa"/>
+                            <constraint firstItem="xU6-rU-Ofs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="VtD-jq-78X"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xU6-rU-Ofs" secondAttribute="trailing" id="eR3-Ng-CQv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xU6-rU-Ofs" secondAttribute="bottom" constant="20" id="eUF-1H-MCh"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="xU6-rU-Ofs" id="wvH-6i-6qR"/>
                         <outlet property="headerView" destination="tdj-al-ecb" id="iFY-K0-HFp"/>
                     </connections>
                 </viewController>
